5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1712_2504.log
== SUBMITION (2019-05-15 13:31:49) 
-- CODE:
qv = int(input("Quantidade virus: "))
ql = int(input("Quantidade de leucocitos: "))
pv = float(input("Perc virus:"))
pl = float(input("Perc leucocitos: "))


while (ql < 2 * qv):
	q = qv * pv/100
	qv = qv + q
	q2 = ql * pl/100
	ql = ql + q2
	t = t + 1
	if (ql >= 2* qv):
		print(t)
	
-- EXECUTION TIME:
0.243011
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2504/main.py", line 12, in <module>
    t = t + 1
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:32:33) 
-- CODE:
qv = int(input("Quantidade virus: "))
ql = int(input("Quantidade de leucocitos: "))
pv = float(input("Perc virus:"))
pl = float(input("Perc leucocitos: "))


while (ql < 2 * qv):
	q = qv * pv/100
	qv = qv + q
	q2 = ql * pl/100
	ql = ql + q2
	t = t + 1
	if (ql >= 2 * qv):
		print(t)
	
-- EXECUTION TIME:
0.128506
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2504/main.py", line 12, in <module>
    t = t + 1
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:32:50) 
-- CODE:
qv = int(input("Quantidade virus: "))
ql = int(input("Quantidade de leucocitos: "))
pv = float(input("Perc virus:"))
pl = float(input("Perc leucocitos: "))

t = 0

while (ql < 2 * qv):
	q = qv * pv/100
	qv = qv + q
	q2 = ql * pl/100
	ql = ql + q2
	t = t + 1
	if (ql >= 2 * qv):
		print(t)
	
-- EXECUTION TIME:
0.183264
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
